--- a/imgui.ini
+++ b/imgui.ini
@@ -8,3 +8,18 @@ Pos=715,18
 Size=550,680
 Collapsed=1
 
+[Window][window]
+Pos=60,60
+Size=376,223
+Collapsed=0
+
+[Window][Debug]
+Pos=60,60
+Size=443,343
+Collapsed=0
+
+[Window][Setting]
+Pos=144,51
+Size=485,282
+Collapsed=0
+
