--- a/CG2_DirectX.vcxproj.filters
+++ b/CG2_DirectX.vcxproj.filters
@@ -55,7 +55,7 @@
     <Filter Include="ソース ファイル\Utility\ImGuiManager">
       <UniqueIdentifier>{b8cce9d1-0b18-4374-a6b9-536ba3f1aedb}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ソース ファイル\Utility\TextureManager">
+    <Filter Include="ソース ファイル\TextureManager">
       <UniqueIdentifier>{0a84824f-9b65-45c4-8c97-47f2c56e5421}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -124,7 +124,7 @@
       <Filter>ソース ファイル\Utility\ImGuiManager</Filter>
     </ClCompile>
     <ClCompile Include="TextureManager.cpp">
-      <Filter>ソース ファイル\Utility\TextureManager</Filter>
+      <Filter>ソース ファイル\TextureManager</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -207,7 +207,7 @@
       <Filter>ソース ファイル\Utility\ImGuiManager</Filter>
     </ClInclude>
     <ClInclude Include="TextureManager.h">
-      <Filter>ソース ファイル\Utility\TextureManager</Filter>
+      <Filter>ソース ファイル\TextureManager</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
