--- a/CG2_DirectX.vcxproj.filters
+++ b/CG2_DirectX.vcxproj.filters
@@ -244,6 +244,12 @@
     <FxCompile Include="Object3d.VS.hlsl">
       <Filter>シェーダー</Filter>
     </FxCompile>
+    <FxCompile Include="Sprite2D.PS.hlsl">
+      <Filter>シェーダー</Filter>
+    </FxCompile>
+    <FxCompile Include="Sprite2D.VS.hlsl">
+      <Filter>シェーダー</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Object3d.hlsli">
